--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <p>We are working with git</p>
-    <p class="red-paragraph">hello</p>
+    <script src="index.js"></script>
 </body>
 </html>
