--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <p>We are working with git</p>
-    <!-- <script src="index.js"></script> -->
+    <button id="start-button">START</button>
+    <button id="stop-button">STOP</button>
+    <button id="reset-button">RESET</button>
+    <button id="save-button">SAVE</button>
     <div class="digital-clock">
         <div class="hours">
             <p>0</p>   
@@ -26,6 +28,9 @@
             <p>0</p>
         </div>
     </div>
-    <script src="digitalClock.js"></script>
+    <div id="digital-clock-saves">
+
+    </div>
+    <script src="index.js"></script>
 </body>
 </html>
