--- a/index.html
+++ b/index.html
@@ -8,20 +8,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="add-new-article">
-      <div class="add-new-article-field">
-        <label>Title</label>
-        <input id="article-title" />
-      </div>
-      <div class="add-new-article-field">
-        <label>Content</label>
-        <input id="article-content" />
-      </div>
-      <button id="add-article-button">Add Article</button>
-    </div>
     <button id="get-data">Get Data</button>
     <div class="article-list">No data</div>
     <script src="getData.js"></script>
-    <script src="addData.js"></script>
+    <!-- <script src="addData.js"></script> -->
   </body>
 </html>
