--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>We are working with git</p>
-    <p class="red-paragraph">hello</p>
+    <script src="index.js"></script>
 </body>
 </html>
