--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
             Diana's To Do
         </div>
     </div>
+    <div class="elements">
+        <div class="fields">
+            <input class="inputs" type="text" placeholder="write a new item">
+            <i class="fas fa-plus-circle" style="font-size: 20px" id="add-button"></i>
+        </div>
+    </div>
     <script src="index.js"></script>
 </body>
 
