--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
         </div>
     </div>
     <div class="elements">
+        <div id="to-do-list"></div>
         <div class="fields">
-            <input class="inputs" type="text" placeholder="write a new item">
+            <input id="input" type="text" placeholder="write a new item">
             <i class="fas fa-plus-circle" style="font-size: 20px" id="add-button"></i>
         </div>
     </div>
