--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <div id="game-scene"></div>
-
-    <script src="index.js"></script>
+     <!-- <script src="index.js"></script> -->
+     <div id="game-scene" />
+     <script src="game.js"></script>
 </body>
 </html>
