Working on homework

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- <link rel="stylesheet" href="style.css" /> -->
 </head>
 <body>
-    <p>We are working with git</p>
-    <p class="red-paragraph">hello</p>
+    <button id="generate-spaceship">Generate Starship</button>
+    <script src="./spaceshipGenerator.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
