--- a/index.html
+++ b/index.html
@@ -13,7 +13,20 @@
     </div>
 
     <div class="content">
-      <p>HOME PAGE</p>
+      <p>Dogs</p>
+      <div class="container">
+        <div id="breeds"></div>
+        <div id="images">
+          <div id="images-container">
+            <img id="breed-image" />
+          </div>
+          <div id="pagination">
+            <button id="backward"><</button>
+            <p id="page-number">1</p>
+            <button id="forward">></button>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="index.js"></script>
